Make sure there's enough spacing between agenda items

--- a/app/styles/editor.scss
+++ b/app/styles/editor.scss
@@ -119,6 +119,10 @@
       display: block;
     }
 
+		[typeof="besluit:Agendapunt"] {
+			margin-bottom: 0.5rem;
+		}
+
     mark {
       cursor: pointer;
     }
